# pybites-code-clinic

./: README.md  my.env  my_app.py  pyproject.toml
src/pybites_code_clinic/: __init__.py  settings.py
src/pybites_code_clinic/examples/: secret_box_example.env  secret_box_example.py
